--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ trust_anchor_util = ["std"]
 std = []
 
 [dependencies]
-ring = "0.16.0"
+ring = { git = "https://github.com/deltachat/ring" }
 untrusted = "0.7.0"
 
 [dev-dependencies]
